<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:background="@color/blue" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" >

        <RelativeLayout
            android:id="@+id/rl_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <include
                android:id="@+id/act_top"
                layout="@layout/activity_title" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activity_rl_regist_"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_high"
            android:layout_below="@+id/rl_title"
            android:layout_marginTop="@dimen/widget_log" >

            <TextView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/edittext_high"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/widget_ml_big"
                android:gravity="center_vertical"
                android:text="@string/phone_number"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/activity_regist_edt_phone"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/edittext_high"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/widget_ml"
                android:layout_toRightOf="@+id/imageView3"
                android:background="@color/transparent"
                android:ems="10"
                android:gravity="center_vertical|left"
                android:hint="@string/regist_input_phone"
                android:inputType="phone"
                android:singleLine="true"
                android:textColorHint="@color/gray_tv_cl"
                android:textSize="@dimen/tv_size" />
        </RelativeLayout>

        <View
            android:id="@+id/view_line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/activity_rl_regist_"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:background="@color/gray_border" />

        <RelativeLayout
            android:id="@+id/activity_rl_regist_check"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_high"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/view_line1" >

            <TextView
                android:id="@+id/imageView33"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/edittext_high"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/widget_ml_big"
                android:gravity="center_vertical"
                android:text="@string/regist_check"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/activity_regist_check_edt_check_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/widget_ml"
                android:layout_toRightOf="@+id/imageView33"
                android:background="@color/transparent"
                android:ems="10"
                android:hint="@string/pl_input_verification_code"
                android:inputType="number"
                android:singleLine="true"
                android:textColorHint="@color/gray_tv_cl"
                android:textSize="@dimen/tv_size" />

            <Button
                android:id="@+id/activity_regist_get_check_btn_again"
                style="@style/MyWithdrawalOrangeButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/widget_ml"
                android:text="@string/tv_reg_check_again_noml" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/activity_rl_regist_check"
            android:layout_marginTop="6dp"
            android:background="@color/gray_border" />

        <Button
            android:id="@+id/activity_regist_btn_getcode"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_rl_regist_check"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:text="@string/next" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_regist_btn_getcode"
            android:layout_marginTop="20dp" >

            <CheckBox
                android:id="@+id/act_cb_regitst_agreed"
                style="@style/myCBstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/widget_ml_big"
                android:text="@string/read_and_confirm"
                android:textColor="@color/black"
                android:textSize="@dimen/tv_size" />

            <TextView
                android:id="@+id/act_tv_regitst_service_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/act_cb_regitst_agreed"
                android:layout_alignTop="@+id/act_cb_regitst_agreed"
                android:layout_toRightOf="@+id/act_cb_regitst_agreed"
                android:gravity="center_vertical"
                android:text="@string/service_agreement"
                android:textColor="@color/blue_normal"
                android:textStyle="normal" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>